# Insight7

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Doxyfile  QWEN.md  README.md  README.zh-CN.md  README.zh-TW.md  insight.cpp  pyproject.toml  ruff.toml  setup.py  test_cpu_support.csv
backends/cpu/: CMakeLists.txt
backends/cpu/device/: cpu_device.cpp
backends/cpu/registry/: cpu_registry.cpp  cpu_registry.h
backends/cuda/: CMakeLists.txt
backends/cuda/device/: cuda_device.cpp
backends/cuda/registry/: cuda_registry.cpp  cuda_registry.h
bindings/: CMakeLists.txt
bindings/julia/: CMakeLists.txt  Insight.jl  Project.toml  README.md  insight_julia_capi.cpp
bindings/julia/modules/: cast.jl  linalg.jl  manipulation.jl  random.jl
bindings/julia/src/: Insight.jl
bindings/lua/: CMakeLists.txt  README.md  insight-1.0-1.rockspec  insight-scm-1.rockspec  insight.lua  insight_lua.cpp
bindings/lua/insight/: _wrap.lua  cast.lua  complex.lua  elementwise.lua  fft.lua  indexing.lua  init.lua  linalg.lua  manipulation.lua  random.lua  reduction.lua  signal.lua  unary.lua
bindings/python/: CMakeLists.txt  README.md  copy_backends.cmake  insight_py.cpp
bindings/python/insight/: __init__.py  array.py  cast.py  complex.py  creation.py  elementwise.py  fft.py  indexing.py  linalg.py  manipulation.py  random.py  reduction.py  timer.py  types.py  unary.py
bindings/python/insight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demos/: CMakeLists.txt  basic_ops.cpp  fft_demo.cpp  linalg_demo.cpp  radar_task1.cpp  radar_task1.jl  radar_task1.lua  radar_task1.py  verify_task1_precision.py
demos/cpp/: basic_ops.cpp  fft_demo.cpp  gpu_transfer.cpp  linalg_demo.cpp  radar_detection.cpp  radar_pipeline.cpp  radar_task1.cpp  sndfile_demo.cpp  timer_demo.cpp
demos/julia/: basic_ops.jl  feature_extraction.jl  fft_demo.jl  gpu_transfer.jl  linalg_demo.jl  radar_detection.jl  radar_pipeline.jl  radar_task1.jl  sndfile_demo.jl  timer_demo.jl
demos/lua/: basic_ops.lua  feature_extraction.lua  fft_demo.lua  gpu_transfer.lua  linalg_demo.lua  radar_detection.lua  radar_pipeline.lua  radar_task1.lua  sndfile_demo.lua  timer_demo.lua
demos/python/: _plot_pipeline.py  _plot_radar.py  _plot_radar_pipeline.py  basic_ops.py  feature_extraction.py  fft_demo.py  gpu_transfer.py  linalg_demo.py  radar_animation.py  radar_detection.py  radar_insight_plot.py  radar_pipeline.py  radar_task1.py  signal_pipeline.py  sndfile_demo.py  timer_demo.py  verify_task1_precision.py
tests/: CMakeLists.txt
tests/bindings/: test_binding.jl  test_lua_binding.lua  test_numerical_correctness.py  test_python_binding.py  test_python_cuda.py  test_signal_precision.py
tests/cpu/: test_audio.cpp  test_cast.cpp  test_creation.cpp  test_csv.cpp  test_device_info.cpp  test_dtype.cpp  test_elementwise.cpp  test_fft.cpp  test_indexing.cpp  test_linalg.cpp  test_manipulation.cpp  test_reduction.cpp  test_signal.cpp  test_signal_acoustics.cpp  test_signal_convolution.cpp  test_signal_estimation.cpp  test_signal_filter_design.cpp  test_signal_filtering.cpp  test_signal_io.cpp  test_signal_radar.cpp  test_signal_spectral.cpp  test_signal_waveforms.cpp  test_signal_windows.cpp  test_unary.cpp
tests/cpu/cpp/: test_complex.cpp  test_creation.cpp  test_csv.cpp  test_elementwise.cpp  test_fft.cpp  test_indexing.cpp  test_linalg.cpp  test_manipulation.cpp  test_memory.cpp  test_operator.cpp  test_plot.cpp  test_print.cpp  test_profiler.cpp  test_random.cpp  test_reduction.cpp  test_signal.cpp  test_signal_bsplines.cpp  test_signal_demod.cpp  test_signal_estimation.cpp  test_signal_filtering.cpp  test_signal_io.cpp  test_signal_peak_finding.cpp  test_signal_spectral.cpp  test_signal_wavelets.cpp  test_signal_windows.cpp  test_unary.cpp
tests/cpu/julia/: test_audio.jl  test_cast.jl  test_complex.jl  test_cpu_basic.jl  test_creation.jl  test_csv.jl  test_device_info.jl  test_dtype.jl  test_elementwise.jl  test_fft.jl  test_indexing.jl  test_linalg.jl  test_manipulation.jl  test_operator.jl  test_plot.jl  test_print.jl  test_random.jl  test_reduction.jl  test_signal.jl  test_signal_acoustics.jl  test_signal_bsplines.jl  test_signal_convolution.jl  test_signal_demod.jl  test_signal_estimation.jl  test_signal_filter_design.jl  test_signal_filtering.jl  test_signal_io.jl  test_signal_peak_finding.jl  test_signal_radar.jl  test_signal_spectral.jl  test_signal_waveforms.jl  test_signal_wavelets.jl  test_signal_windows.jl  test_unary.jl
tests/cpu/lua/: test_audio.lua  test_cast.lua  test_complex.lua  test_cpu_basic.lua  test_creation.lua  test_csv.lua  test_device_info.lua  test_dtype.lua  test_elementwise.lua  test_fft.lua  test_indexing.lua  test_linalg.lua  test_manipulation.lua  test_operator.lua  test_plot.lua  test_print.lua  test_random.lua  test_reduction.lua  test_signal.lua  test_signal_acoustics.lua  test_signal_bsplines.lua  test_signal_convolution.lua  test_signal_demod.lua  test_signal_estimation.lua  test_signal_filter_design.lua  test_signal_filtering.lua  test_signal_io.lua  test_signal_peak_finding.lua  test_signal_radar.lua  test_signal_spectral.lua  test_signal_waveforms.lua  test_signal_wavelets.lua  test_signal_windows.lua  test_timer.lua  test_unary.lua
tests/cpu/python/: conftest.py  test_audio.py  test_cast.py  test_complex.py  test_cpu_basic.py  test_creation.py  test_csv.py  test_device_info.py  test_dtype.py  test_elementwise.py  test_fft.py  test_indexing.py  test_linalg.py  test_manipulation.py  test_operator.py  test_operators.py  test_plot.py  test_print.py  test_random.py  test_reduction.py  test_signal.py  test_signal_acoustics.py  test_timer.py  (+14 more)
tests/cuda/: test_cast.cpp  test_complex.cpp  test_csv.cpp  test_device_info.cpp  test_dtype.cpp  test_elementwise.cpp  test_fft.cpp  test_linalg.cpp  test_manipulation.cpp  test_print.cpp  test_random.cpp  test_signal.cpp  test_signal_acoustics.cpp  test_signal_bsplines.cpp  test_signal_convolution.cpp  test_signal_filter_design.cpp  test_signal_filtering.cpp  test_signal_spectral.cpp  test_signal_windows.cpp  test_unary.cpp
(+863 files in other folders)
