[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "insight"
version = "1.0.0"
description = "Insight7 — lightweight scientific computing framework with GPU acceleration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
where = ["bindings/python"]
include = ["insight*"]

[tool.setuptools.package-data]
"insight" = ["*.so", "*.dll", "*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests/bindings"]
